Web Interface: fix #15
A transparent overlaying div appears above the whole page
when the Hub is diconnected.
The current page is reloaded when connection is reestablished.

--- a/web_interface/css/web_interface.css
+++ b/web_interface/css/web_interface.css
@@ -295,3 +295,17 @@ div.bootstrap-switch-container {
 .back_white {
   background-color: white;
 }
+
+.overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 9999999;
+  cursor: not-allowed;
+}
